--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=franquicias
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://prueba-accenture.c7i4io808cdv.us-east-2.rds.amazonaws.com:3306/accenture
+spring.datasource.username=daniel
+spring.datasource.password=Pruebas123*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+# Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=create
