Se realiza actualización del docker-compose para anexar el build por simplicidad se realiza versionamiento

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   prueba-tecnica-api:
+    build: .
     image: prueba-tecnica-api
     container_name: spring-franquicia-api
     ports:
